trunk/test/fail/InterfaceTests.tart
/// TEST InterfaceDataMember: Data member not allowed in interface
interface Test {
  var x:int;
}

/// TEST InterfaceMethodWithBody: body not allowed
interface Test {
  def func() {}
}

// Test private, public in interface.
// Test interface inheritance.
